--- a/server/app/views/index.scala.html
+++ b/server/app/views/index.scala.html
@@ -2,7 +2,7 @@
 
 
     @main {
-        <div id="root" class="container body"></div>
+    <div id="root"></div>
         <script src="@{
             def bundleUrl(projectName: String): Option[String] = {
                 val name = projectName.toLowerCase
