--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" type="text/css" href="@routes.Assets.versioned("stylesheets/main.css")">
 
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/monokai.min.css" />
     </head>
     <body>
     @content
