--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -17,6 +17,11 @@
 
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/monokai.min.css" />
+        <style type="text/css">
+            .nav-item {
+                color: #007bff
+            }
+        </style>
     </head>
     <body>
     @content
