--- a/server/app/views/phpForm.scala.html
+++ b/server/app/views/phpForm.scala.html
@@ -1,4 +1,6 @@
 @import domain.sql.Table
+@import domain.sql._
+
 @(table: Table, name: String)
 
 /**
@@ -19,8 +21,9 @@ interface I@(name)Factory
  */
 class @name extends BaseForm {
 
-
+    // specifies template directory for BaseForm parent
     const TEMPLATE_DIRECTORY = "templates/@table.name";
+    // specifies template name for BaseForm parent
     const TEMPLATE_NAME = "@(table.name).latte";
 
     /**
@@ -56,8 +59,27 @@ class @name extends BaseForm {
     {
         $form = new Form();
 
-        $form->addText()
-
+    @for(col <- table.cols) {
+        @col.colType match {
+            case ColumnInt()|ColumnVarchar()|ColumnTimestamp() => {$form->addText("@col.name", "@col.name")}
+            case ColumnTinyInt() => {$form->addCheckbox("@col.name", "@col.name")}
+            case ColumnEnum() => {$form->addSelect("@col.name", "@col.name", @col.options.find(_.isInstanceOf[ColumnEnumTypes]).getOrElse(ColumnEnumTypes(List())) match {
+                case a: ColumnEnumTypes => {
+                    [
+                    @for(t <- a.types){"@t"@if(!a.types.last.equals(t)) {,}}
+                    ])}
+                case _ => {)}
+                }}
+            case ColumnText() => {$form->addTextArea("@col.name", "@col.name")}
+            case _ => {NUTING}
+        }
+        @col.colType match {
+            case ColumnInt() => {   ->addRule(Form::NUMERIC, "@col.name must be a number")}
+            case _ => {}
+        }
+        @for(opt <- col.options) {
+        }
+    }
         $form->onSuccess[] = array($this, 'processForm');
         return $form;
     }
